--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 # Valid values are "generic", "avx2", "avx512", "avx512_spr", "sve".
 option(FAISS_OPT_LEVEL "" "generic")
 option(FAISS_ENABLE_GPU "Enable support for GPU indexes." ON)
+option(FAISS_ENABLE_METAL "Enable support for Metal on Apple Silicon." OFF)
 option(FAISS_GPU_STATIC "Link GPU libraries statically." OFF)
 option(FAISS_ENABLE_CUVS "Enable cuVS for GPU indexes." OFF)
 option(FAISS_ENABLE_ROCM "Enable ROCm for GPU indexes." OFF)
@@ -82,6 +83,15 @@ if(FAISS_ENABLE_GPU)
     enable_language(CUDA)
     set(GPU_EXT_PREFIX "cu")
   endif()
+endif()
+
+if(FAISS_ENABLE_METAL)
+  find_library(METAL_LIBRARY Metal)
+  find_library(FOUNDATION_LIBRARY Foundation)
+  if(NOT METAL_LIBRARY OR NOT FOUNDATION_LIBRARY)
+    message(FATAL_ERROR "Metal or Foundation library not found. Please ensure you are building on macOS with Xcode installed.")
+  endif()
+  add_definitions(-DFAISS_ENABLE_METAL)
 endif()
 
 if(FAISS_ENABLE_CUVS AND NOT TARGET cuvs::cuvs)
