--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -241,11 +241,6 @@ set(FAISS_HEADERS
   utils/hamming_distance/avx512-inl.h
 )
 
-if(FAISS_ENABLE_METAL)
-  list(APPEND FAISS_SRC metal/MetalResources.mm metal/MetalMemoryPool.mm metal/MetalIndexFlat.mm metal/MetalIndexIVFFlat.mm metal/MetalIndexIVFPQ.mm metal/MetalIndexHNSW.mm metal/MetalMultiGpu.mm metal/MetalMixedPrecision.mm metal/MetalVectorTransform.mm)
-  list(APPEND FAISS_HEADERS metal/MetalResources.h metal/MetalMemoryPool.h metal/MetalIndexFlat.h metal/MetalIndexIVFFlat.h metal/MetalIndexIVFPQ.h metal/MetalIndexHNSW.h metal/MetalMultiGpu.h metal/MetalMixedPrecision.h metal/MetalVectorTransform.h)
-endif()
-
 if(NOT WIN32)
   list(APPEND FAISS_SRC invlists/OnDiskInvertedLists.cpp)
   list(APPEND FAISS_HEADERS invlists/OnDiskInvertedLists.h)
@@ -257,12 +252,7 @@ set(FAISS_HEADERS ${FAISS_HEADERS} PARENT_SCOPE)
 add_library(faiss ${FAISS_SRC})
 
 if(FAISS_ENABLE_METAL)
-  set_source_files_properties(metal/MetalResources.mm PROPERTIES LANGUAGE CXX)
-  set_source_files_properties(metal/MetalResources.mm PROPERTIES MACOSX_RPATH ON)
-  target_compile_features(faiss PUBLIC cxx_objc_hybrid_from_header)
-
-  add_library(faiss_metal_kernels METAL faiss/metal/kernels.metal)
-  target_link_libraries(faiss PRIVATE faiss_metal_kernels)
+  add_subdirectory(metal)
 endif()
 
 add_library(faiss_avx2 ${FAISS_SRC})
@@ -391,7 +381,22 @@ if(FAISS_USE_LTO)
   endif()
 endif()
 
-if(NOT APPLE)
+if(APPLE)
+  find_package(OpenMP)
+  if(OpenMP_FOUND)
+    target_link_libraries(faiss PRIVATE OpenMP::OpenMP_CXX)
+    target_link_libraries(faiss_avx2 PRIVATE OpenMP::OpenMP_CXX)
+    target_link_libraries(faiss_avx512 PRIVATE OpenMP::OpenMP_CXX)
+    target_link_libraries(faiss_avx512_spr PRIVATE OpenMP::OpenMP_CXX)
+    target_link_libraries(faiss_sve PRIVATE OpenMP::OpenMP_CXX)
+  else()
+    target_compile_definitions(faiss PRIVATE _OPENMP)
+    target_compile_definitions(faiss_avx2 PRIVATE _OPENMP)
+    target_compile_definitions(faiss_avx512 PRIVATE _OPENMP)
+    target_compile_definitions(faiss_avx512_spr PRIVATE _OPENMP)
+    target_compile_definitions(faiss_sve PRIVATE _OPENMP)
+  endif()
+else()
   find_package(OpenMP REQUIRED)
   target_link_libraries(faiss PRIVATE OpenMP::OpenMP_CXX)
   target_link_libraries(faiss_avx2 PRIVATE OpenMP::OpenMP_CXX)
@@ -428,7 +433,7 @@ if(FAISS_ENABLE_METAL)
   target_link_libraries(faiss PRIVATE ${METAL_LIBRARY} ${FOUNDATION_LIBRARY})
 endif()
 
-install(TARGETS faiss
+install(TARGETS faiss faiss_metal_kernels
   EXPORT faiss-targets
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
