--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -225,47 +225,41 @@ if(FAISS_ENABLE_GPU)
   endif()
 endif()
 
-find_package(OpenMP REQUIRED)
 
 target_link_libraries(swigfaiss PRIVATE
   faiss
+  faiss_metal
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(swigfaiss_avx2 PRIVATE
   faiss_avx2
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(swigfaiss_avx512 PRIVATE
   faiss_avx512
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(swigfaiss_avx512_spr PRIVATE
   faiss_avx512_spr
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(swigfaiss_sve PRIVATE
   faiss_sve
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
 )
 
 target_link_libraries(faiss_example_external_module PRIVATE
   Python::Module
   Python::NumPy
-  OpenMP::OpenMP_CXX
   swigfaiss
   faiss
 )
