--- a/perf_tests/CMakeLists.txt
+++ b/perf_tests/CMakeLists.txt
@@ -17,7 +17,6 @@ FetchContent_MakeAvailable(
 
 
 find_package(Threads REQUIRED)
-find_package(OpenMP REQUIRED)
 find_package(gflags REQUIRED)
 
 add_library(faiss_perf_tests_utils
@@ -42,7 +41,7 @@ foreach(bench ${FAISS_PERF_TEST_SRC})
   get_filename_component(bench_exec ${bench} NAME_WE)
   add_executable(${bench_exec} ${bench})
   link_to_faiss_lib(${bench_exec})
-  target_link_libraries(${bench_exec} PRIVATE faiss_perf_tests_utils OpenMP::OpenMP_CXX benchmark::benchmark gflags)
+  target_link_libraries(${bench_exec} PRIVATE faiss_perf_tests_utils benchmark::benchmark gflags)
   # `#include <faiss/perf_tests/utils.h>` or any other headers
   target_include_directories(${bench_exec} PRIVATE
    ${PROJECT_SOURCE_DIR}/../..)
