--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ set(FAISS_TEST_SRC
   test_hamming.cpp
   test_mmap.cpp
   test_zerocopy.cpp
+  test_svs.cpp  # TODO: should be guarded by FAISS_ENABLE_SVS
 )
 
 add_executable(faiss_test ${FAISS_TEST_SRC})
