--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -377,7 +377,13 @@ if(FAISS_USE_LTO)
   endif()
 endif()
 
-find_package(OpenMP REQUIRED)
+#find_package(OpenMP REQUIRED)
+find_package(OpenMP REQUIRED COMPONENTS CXX)
+find_package(OpenMP OPTIONAL_COMPONENTS CUDA)
+if(NOT OpenMP_CUDA_FOUND AND FAISS_ENABLE_GPU)
+	message(WARNING "OpenMP CUDA‐offload not found; building without it.")
+endif()
+
 target_link_libraries(faiss PRIVATE OpenMP::OpenMP_CXX)
 target_link_libraries(faiss_avx2 PRIVATE OpenMP::OpenMP_CXX)
 target_link_libraries(faiss_avx512 PRIVATE OpenMP::OpenMP_CXX)
