--- a/faiss/gpu/demos/CMakeLists.txt
+++ b/faiss/gpu/demos/CMakeLists.txt
@@ -9,9 +9,9 @@ find_package(CUDAToolkit REQUIRED)
 add_executable(demo_multi_sequence EXCLUDE_FROM_ALL demo_multi_sequence.cpp)
 target_link_libraries(demo_multi_sequence PRIVATE faiss CUDA::cudart OpenMP::OpenMP_CXX)
 
-find_package(MPI REQUIRED)
+find_package(MPI REQUIRED CXX)
 # This has a conditional, because it wan't found in a CI/CD runner
-if(MPI_FOUND)
+if(MPI_CXX_FOUND)
     find_package(OpenMP REQUIRED)
     add_executable(demo_imipq_gpu_sift_m_mpi EXCLUDE_FROM_ALL demo_imipq_gpu_sift_m_mpi.cpp)
     target_link_libraries(demo_imipq_gpu_sift_m_mpi PRIVATE faiss CUDA::cudart MPI::MPI_CXX OpenMP::OpenMP_CXX)
