--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ on:
 jobs:
   build-pull-request:
     uses: ./.github/workflows/build-pull-request.yml
-  build-release:
-    uses: ./.github/workflows/build-release.yml
-    secrets:
-      ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+  # DISABLED - build-release:
+  #   uses: ./.github/workflows/build-release.yml
+  #   secrets:
+  #     ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_API_TOKEN }}
+  #   if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
