--- a/.github/workflows/retry_build.yml
+++ b/.github/workflows/retry_build.yml
@@ -1,9 +1,9 @@
-name: Retry Build
-on:
-  workflow_dispatch:
-    inputs:
-      run_id:
-        required: true
+# DISABLED - name: Retry Build
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       run_id:
+#         required: true
 jobs:
   rerun-on-failure:
     permissions: write-all
