renovate yml changes

--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -17,3 +17,4 @@ jobs:
         uses: renovatebot/github-action@v43.0.12
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          repositories: ${{ github.repository }}
