--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -346,7 +346,7 @@ endif()
 
 if(FAISS_ENABLE_SVS)
   include(FetchContent)
-  set(SVS_URL "https://github.com/intel/ScalableVectorSearch/releases/download/v1.0.0-dev/svs-shared-library-1.0.0-NIGHTLY-20251015-gcc14.tar.gz")
+  set(SVS_URL "https://github.com/intel/ScalableVectorSearch/releases/download/v1.0.0-dev/svs-shared-library-1.0.0.-NIGHTLY-20251029.tar.gz")
   FetchContent_Declare(
       svs
       URL "${SVS_URL}"
