runtime namespace updates

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -354,14 +354,14 @@ if(FAISS_ENABLE_SVS)
   )
   FetchContent_MakeAvailable(svs)
   list(APPEND CMAKE_PREFIX_PATH "${svs_SOURCE_DIR}")
-  find_package(svs_faiss REQUIRED)
+  find_package(svs_runtime REQUIRED)
   #target_compile_options(svs::svs INTERFACE "-DSVS_ENABLE_OMP=1")
 
-  target_link_libraries(faiss PUBLIC svs::svs_faiss)
-  target_link_libraries(faiss_avx2 PUBLIC svs::svs_faiss)
-  target_link_libraries(faiss_avx512 PUBLIC svs::svs_faiss)
-  target_link_libraries(faiss_avx512_spr PUBLIC svs::svs_faiss)
-  target_link_libraries(faiss_sve PUBLIC svs::svs_faiss)
+  target_link_libraries(faiss PUBLIC svs::svs_runtime)
+  target_link_libraries(faiss_avx2 PUBLIC svs::svs_runtime)
+  target_link_libraries(faiss_avx512 PUBLIC svs::svs_runtime)
+  target_link_libraries(faiss_avx512_spr PUBLIC svs::svs_runtime)
+  target_link_libraries(faiss_sve PUBLIC svs::svs_runtime)
 endif()
 
 # Handle `#include <faiss/foo.h>`.
