update flat to new runtime; use v0 api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,8 @@ option(FAISS_ENABLE_C_API "Build C API." OFF)
 option(FAISS_ENABLE_EXTRAS "Build extras like benchmarks and demos" ON)
 option(FAISS_USE_LTO "Enable Link-Time optimization" OFF)
 option(FAISS_ENABLE_SVS "Enable SVS (Intel(R) Scalable Vector Search) integration." ON)
+set(SVS_RUNTIME_VERSION "v0" CACHE STRING "Version of the SVS runtime API to use")
+set_property(CACHE SVS_RUNTIME_VERSION PROPERTY STRINGS "v0")
 
 if(FAISS_ENABLE_GPU)
   if(FAISS_ENABLE_ROCM)
